--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,19 @@
         <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>
+            spring-boot-starter-data-mongodb
+        </artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>de.flapdoodle.embed</groupId>
+        <artifactId>de.flapdoodle.embed.mongo</artifactId>
+        <!-- <scope>test</scope> -->
+    </dependency>
+
 <!-- tag::allButSelenium[] -->
   </dependencies>
 
